[package]
name = "reddb-io-rql"
version = "1.0.0"
edition = "2021"
authors = ["RedDB.io <hello@reddb.io>"]
description = "RedDB Query Language (RQL) front-end + conformance authority (ADR 0053). Owns the sqllogictest-format conformance suite whose truth comes from the public SQLite corpus; depends only on reddb-io-types."
license = "AGPL-3.0-only"
homepage = "https://github.com/reddb-io/reddb"
repository = "https://github.com/reddb-io/reddb"
documentation = "https://docs.rs/reddb-io-rql"
keywords = ["database", "sql", "rql", "conformance", "sqllogictest"]
categories = ["database-implementations", "parser-implementations"]

[lib]
name = "reddb_rql"
path = "src/lib.rs"

# The crate graph stays acyclic and shallow: the rql front-end depends only on
# the neutral keystone type vocabulary (ADR 0052) and nothing else of the
# workspace.
[dependencies]
reddb-types = { package = "reddb-io-types", version = "1.0", path = "../reddb-types" }

# The conformance harness runs the corpus end-to-end against the *current
# in-server engine* (ADR 0053: executors stay in reddb-server during the
# extraction). It reaches the engine only from the integration-test target, so
# `reddb-server` and the `sqllogictest` harness are dev-only — the published
# crate graph keeps `reddb-io-rql -> reddb-io-types` as its sole edge.
[dev-dependencies]
reddb-server = { package = "reddb-io-server", version = "1.10", path = "../reddb-server" }
sqllogictest = "0.29"
# Parser property round-trip tests (issue #87) moved in with the parser family
# (#1103); the AST→SQL renderer moved with them, so the round-trip stays a
# single in-crate type instance (no `reddb-server` round-trip).
proptest = "1"
# Embedded parser tests assert on parsed SECRET_REF JSON via the upstream
# `serde_json` crate (the server carries the same dependency).
serde_json = "1"
