[package]
name = "reddb-io-rql"
version = "1.16.0"
edition.workspace = true
authors.workspace = true
description = "RedDB Query Language (RQL) front-end + conformance authority (ADR 0053). Owns the sqllogictest-format conformance suite whose truth comes from the public SQLite corpus; depends only on reddb-io-types."
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/reddb-io-rql"
keywords = ["database", "sql", "rql", "conformance", "sqllogictest"]
categories = ["database-implementations", "parser-implementations"]

[lib]
name = "reddb_rql"
path = "src/lib.rs"

# The crate graph stays acyclic and shallow: the rql front-end depends only on
# the neutral keystone type vocabulary (ADR 0052) and nothing else of the
# workspace.
[dependencies]
reddb-types = { workspace = true }

[dev-dependencies]
# Parser property round-trip tests (issue #87) moved in with the parser family
# (#1103); the AST→SQL renderer moved with them, so the round-trip stays a
# single in-crate type instance (no `reddb-server` round-trip).
proptest = "1"
# Embedded parser tests assert on parsed SECRET_REF JSON via the upstream
# `serde_json` crate (the server carries the same dependency).
serde_json = "1"

[lints]
workspace = true
