[package]
name = "reddb-io-server"
version = "1.0.0"
edition = "2021"
authors = ["RedDB.io <hello@reddb.io>"]
description = "RedDB server-side engine: storage, runtime, replication, MCP, AI, and the gRPC/HTTP/RedWire/PG-wire dispatchers. Re-exported by the umbrella `reddb` crate."
license = "AGPL-3.0-only"
homepage = "https://github.com/reddb-io/reddb"
repository = "https://github.com/reddb-io/reddb"
documentation = "https://docs.rs/reddb-io-server"
readme = "README.md"
keywords = ["database", "vector-search", "graph", "document-store", "rust"]
categories = ["database-implementations", "data-structures"]

[lib]
name = "reddb_server"
path = "src/lib.rs"

[dependencies]
reddb-wire = { package = "reddb-io-wire", version = "1.0", path = "../reddb-wire" }
reddb-grpc-proto = { package = "reddb-io-grpc-proto", version = "1.0", path = "../reddb-grpc-proto" }
# rpc_stdio's Remote backend wraps the same gRPC client that the
# `red` binary uses for the `red rpc` subcommand. Single-direction
# dep — the client crate does not depend on the server.
reddb-client-connector = { package = "reddb-io-client-connector", version = "1.0", path = "../reddb-client-connector" }
aes-gcm = "0.10"
blake3 = "1"
hmac = "0.13"
itoa = "1"
zstd = { version = "0.13", default-features = false }
lz4_flex = { version = "0.13", default-features = false, features = ["std"] }
sha2 = "0.11"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tonic = { version = "0.14", features = ["transport", "gzip", "zstd", "tls-ring"] }
tonic-prost = "0.14"
prost = "0.14"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
roaring = "0.11"
parking_lot = "0.12"
# crossbeam-queue::SegQueue powers the lock-free WAL append path
# (Roadmap #2 / issue #157). Writers atomically reserve an LSN via
# next_lsn.fetch_add and push their encoded bytes onto the queue —
# no mutex held across the encode-and-push step. The leader drain
# loop pops, sorts by LSN, and writes contiguous prefixes to the
# BufWriter under the WAL file mutex. Preserves on-disk format.
crossbeam-queue = "0.3"
rayon = "1.12"
rstar = "0.12"
regex = "1"
fs2 = "0.4"
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "logging", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
    "ansi",
    "registry",
] }
tracing-appender = "0.2"
# `http::HeaderValue` is the typed return of `HeaderEscapeGuard`
# (issue #176, ADR 0010). Using the same type the wider Rust HTTP
# ecosystem agrees on means future swaps to hyper / axum inherit
# the guard's contract for free. The crate is already in the
# transitive graph via tonic; pinning it here makes the dep
# explicit and survives if tonic ever drops it.
http = "1"
strsim = "0.11"
lru = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }

[features]
default = []
backend-s3 = []
backend-turso = []
backend-d1 = []
ai-ner-network = ["dep:reqwest"]
# OpenTelemetry tracing. Opt-in (`--features otel`) so the OTLP
# dependency tree doesn't bloat the default build.
otel = []

[[bench]]
name = "blob_cache_bench"
harness = false

[[bench]]
name = "column_policy_gate_bench"
harness = false

[[bench]]
name = "ai_batch_bench"
harness = false

[dev-dependencies]
# Criterion benchmark harness for blob_cache_bench (#190).
criterion = { version = "0.5", features = ["html_reports"] }
# tempfile: L2-backed scenarios need a temp directory per bench group.
tempfile = "3"
# Used by `tests/compile_fail.rs` to assert that misuse of
# `LeaseStore::new` (passing a non-CAS backend) fails to compile.
trybuild = "1"
# OAuth-JWT end-to-end smoke. `jsonwebtoken` mints + decodes RS256
# tokens; `serde_json` shapes the JWKS responses. Both are dev-only.
# v10 requires opting into a crypto backend; `rust_crypto` keeps the
# tests pure-Rust (no system C deps), matching the rest of the dev tree.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde_json = "1"
# Parser hardening harness (issue #87): property tests via proptest,
# pinned error-message snapshots via insta. The `filters` feature
# (issue #98) lets the shared secret redactor mask secret-shaped
# strings before insta diffs the snapshot. `regex` is reused by the
# secret-redactor unit tests + the snapshot-redaction lint (#98) to
# scan committed `*.snap` files for unmasked secret-shaped strings.
proptest = "1"
insta = { version = "1", features = ["filters"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
