[package]
name = "reddb-io-server"
version = "1.14.0"
edition.workspace = true
authors.workspace = true
description = "RedDB server-side engine: storage, runtime, replication, MCP, AI, and the gRPC/HTTP/RedWire/PG-wire dispatchers. Re-exported by the umbrella `reddb` crate."
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/reddb-io-server"
readme = "README.md"
keywords = ["database", "vector-search", "graph", "document-store", "rust"]
categories = ["database-implementations", "data-structures"]

[lib]
name = "reddb_server"
path = "src/lib.rs"

[dependencies]
# Neutral keystone: the logical type vocabulary (Value/DataType/...) re-homed
# from storage::schema (#1061, ADR 0052). storage::schema keeps a re-export shim.
reddb-types = { workspace = true }
# RQL language front-end authority (#1102, ADR 0053): the lexer and front-end
# DoS limits live here now; storage::query keeps re-export shims so every
# existing call-site path resolves unchanged. (rql dev-depends back on the
# server for its conformance harness — a dev-only edge, so no build cycle.)
reddb-rql = { workspace = true }
reddb-wire = { workspace = true }
reddb-grpc-proto = { workspace = true }
reddb-file = { workspace = true }
# Canonical per-page encryption-at-rest envelope + params (#1053, ADR 0054).
reddb-crypto = { workspace = true }
# rpc_stdio's Remote backend wraps the same gRPC client that the
# `red` binary uses for the `red rpc` subcommand. Single-direction
# dep — the client crate does not depend on the server.
reddb-client-connector = { workspace = true }
aes-gcm = "0.10"
blake3 = "1"
# SIMD/PCLMULQDQ CRC32 (IEEE 802.3 polynomial) for WAL/page record
# checksums (issue #883 / PRD #882). Runtime CPU feature detection
# selects the pclmulqdq path with a table-based scalar fallback —
# byte-identical to the previous hand-rolled software CRC32, so no
# on-disk WAL format change. Already in the tree transitively via
# flate2; promoted here to a direct dependency.
crc32fast = "1.5"
hmac = "0.13"
itoa = "1"
zstd = { version = "0.13", default-features = false }
lz4_flex = { version = "0.13", default-features = false, features = ["std"] }
sha2 = "0.11"
hex = "0.4"
# Browser credential layer — hybrid token (issue #936, PRD #930).
# `auth::browser_token` mints + verifies the short-lived HS256 access
# JWT and the refresh JWT with this vetted library (RedDB is both issuer
# and verifier, so the symmetric HS256 path is sufficient — the
# asymmetric RS256/JWKS machinery of `auth::oauth` exists to trust a
# *foreign* IdP). `rust_crypto` keeps the backend pure-Rust, matching the
# dev-dependency the OAuth e2e test already pins.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
# Ed25519 signature verification for Signed Writes (issue #520 / #522).
# Used by `storage::signed_writes` to validate that an INSERT's
# `signature` column was produced by a key in the collection's
# `SIGNED_BY (...)` registry. Default features pull in `rand` and
# `std` which we already rely on elsewhere; pinning to "2" tracks the
# 2.x line that the rest of the workspace's transitive graph
# already resolved to in Cargo.lock.
ed25519-dalek = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tonic = { version = "0.14", features = ["transport", "gzip", "zstd", "tls-ring"] }
tonic-prost = "0.14"
prost = "0.14"
snap = "1"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
# `red ui` bundle resolver (issue #1043, ADR 0050): tgz extraction for the
# pinned red-ui release asset. `flate2` decompresses the gz layer; `tar`
# iterates the archive entries. Both are already transitive in Cargo.lock;
# made explicit here so the UI bundle resolver can import them directly.
flate2 = "1"
tar = "0.4"
roaring = "0.11"
parking_lot = "0.12"
# crossbeam-queue::SegQueue powers the lock-free WAL append path
# (Roadmap #2 / issue #157). Writers atomically reserve an LSN via
# next_lsn.fetch_add and push their encoded bytes onto the queue —
# no mutex held across the encode-and-push step. The leader drain
# loop pops, sorts by LSN, and writes contiguous prefixes to the
# BufWriter under the WAL file mutex. Preserves on-disk format.
crossbeam-queue = "0.3"
rayon = "1.12"
rstar = "0.13"
regex = "1"
fs2 = "0.4"
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "logging", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
# webpki system trust roots for the `red ui` outbound TLS connection to a
# `reds://` remote RedWire target (issue #1044). Already in the lock via
# the wider rustls graph; pinned here so the bridge connector can seed its
# RootCertStore with public CAs without an explicit `--tls-ca`.
webpki-roots = "1"
x509-parser = "0.18"
rcgen = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
    "ansi",
    "registry",
] }
tracing-appender = "0.2"
# `http::HeaderValue` is the typed return of `HeaderEscapeGuard`
# (issue #176, ADR 0010). Using the same type the wider Rust HTTP
# ecosystem agrees on means future swaps to hyper / axum inherit
# the guard's contract for free. The crate is already in the
# transitive graph via tonic; pinning it here makes the dep
# explicit and survives if tonic ever drops it.
http = "1"
# Async HTTP edge (issue #931, PRD #930, ADR 0036) — the HTTP transport
# moved off thread-per-connection onto an axum/hyper service on tokio.
# All four crates already resolved in Cargo.lock via the tonic/tower
# graph, so pinning them here only makes the dependency explicit. The
# sync disk-backed engine is reached from the async edge via
# `spawn_blocking`, exactly as the RedWire session bridges
# async-transport ↔ sync-engine.
# `ws` adds the binary-WebSocket upgrade extractor used by the
# RedWire-over-WSS browser endpoint (issue #935, ADR 0036). It pulls
# tokio-tungstenite, which terminates the WS protocol; the binary data
# channel is bridged into the transport-agnostic RedWire session (#932).
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "tokio", "ws"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "service", "tokio"] }
bytes = "1"
strsim = "0.11"
lru = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
# Insertion-order-preserving map used by the GROUP BY / parallel-aggregate
# paths (#630) so partial group state never carries HashMap's
# randomized iteration order into the merge or sort step.
indexmap = "2"

[features]
default = []
backend-s3 = []
backend-turso = []
backend-d1 = []
ai-ner-network = ["dep:reqwest"]
local-models = []
# Test-only crash injection for `vector.turbo` named boundaries (#694).
# Production builds compile the injection points to a no-op; this
# feature lights up the installable injector so the crash-safety
# slice (#673) can drive its kill-point tests against named
# boundaries from outside the test binary too.
turbo-crash-inject = []
# OpenTelemetry tracing. Opt-in (`--features otel`) so the OTLP
# dependency tree doesn't bloat the default build.
otel = []

[[test]]
name = "integration_turbo_crash_inject"
path = "tests/integration_turbo_crash_inject.rs"
required-features = ["turbo-crash-inject"]

[[bench]]
name = "blob_cache_bench"
harness = false

[[bench]]
name = "column_policy_gate_bench"
harness = false

[[bench]]
name = "ai_batch_bench"
harness = false

[[bench]]
name = "columnar_read_bench"
harness = false

[dev-dependencies]
# Criterion benchmark harness for blob_cache_bench (#190).
criterion = { version = "0.8", features = ["html_reports"] }
# tempfile: L2-backed scenarios need a temp directory per bench group.
tempfile = "3"
# Used by `tests/compile_fail.rs` to assert that misuse of
# `LeaseStore::new` (passing a non-CAS backend) fails to compile.
trybuild = "1"
# OAuth-JWT end-to-end smoke uses `jsonwebtoken` to mint + decode RS256
# tokens; it is now a normal dependency (see `[dependencies]`, used by
# `auth::browser_token`) so it no longer needs a dev-dependency entry.
# `serde_json` shapes the JWKS responses in tests.
serde_json = "1"
# Parser hardening harness (issue #87): property tests via proptest,
# pinned error-message snapshots via insta. The `filters` feature
# (issue #98) lets the shared secret redactor mask secret-shaped
# strings before insta diffs the snapshot. `regex` is reused by the
# secret-redactor unit tests + the snapshot-redaction lint (#98) to
# scan committed `*.snap` files for unmasked secret-shaped strings.
proptest = "1"
insta = { version = "1", features = ["filters"] }
regex = "1"
toml = "1.1"
# RedWire-over-WS bridge e2e (issue #1042): a browser-style WS client
# drives the anonymous handshake + a query over the loopback bridge.
# Pinned to 0.29 to match the axum-resolved tungstenite in Cargo.lock.
tokio-tungstenite = "0.29"
futures-util = "0.3"
http = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
