[package]
name = "reddb-io-types"
version = "1.22.0"
edition.workspace = true
authors.workspace = true
description = "RedDB logical type system: the neutral keystone vocabulary — Value, DataType, SqlTypeName, TypeModifier, TypeCategory, ValueError, Row — depended on by every authority crate and depending on none."
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/reddb-io-types"
keywords = ["database", "type-system", "value", "sql-types"]
categories = ["database-implementations", "data-structures"]

[lib]
name = "reddb_types"
path = "src/lib.rs"

[[bin]]
name = "measure_value_layout"
path = "src/bin/measure_value_layout.rs"

[dependencies]
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
proptest = "1"
# Array display/plain-text formatting allocation benchmark (#1342).
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "array_display_bench"
harness = false

[lints]
workspace = true
