[package]
name = "reddb-io-wire"
version = "1.0.8"
edition = "2021"
authors = ["RedDB.io <hello@reddb.io>"]
description = "RedDB wire protocol vocabulary: connection-string parser and (later) RedWire frame types. Shared by reddb-server, reddb-client, and the official drivers."
license = "AGPL-3.0-only"
homepage = "https://github.com/reddb-io/reddb"
repository = "https://github.com/reddb-io/reddb"
documentation = "https://docs.rs/reddb-io-wire"
readme = "README.md"
keywords = ["reddb", "wire", "protocol", "connection-string"]
categories = ["database", "network-programming"]

[lib]
name = "reddb_wire"
path = "src/lib.rs"

[dependencies]
url = "2"
zstd = { version = "0.13", default-features = false }

# Issue #90: parser-hardening test suite mirrors the SQL parser
# coverage (#87). Property tests via proptest, pinned error-message
# snapshots via insta. The `filters` feature (issue #98) lets the
# shared secret redactor mask secret-shaped strings before insta
# diffs the snapshot. `regex` powers the redactor unit tests + the
# wire-side snapshot-redaction lint (#98).
[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["filters"] }
regex = "1"
