[package]
name = "reddb-io-wire"
version = "1.23.0"
edition.workspace = true
authors.workspace = true
description = "RedDB wire protocol vocabulary: connection-string parser, RedWire frames, payload codecs, topology, sanitizers, and replication messages."
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/reddb-io-wire"
readme = "README.md"
keywords = ["reddb", "wire", "protocol", "connection-string"]
categories = ["database", "network-programming"]

[lib]
name = "reddb_wire"
path = "src/lib.rs"

[dependencies]
# Keystone type vocabulary (ADR 0052). Owns the engine `Value`; the legacy
# protocol's WireValue<->Value conversions live in `legacy` because the orphan
# rule pins them to WireValue's home crate once Value moved below wire.
reddb-types = { workspace = true }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["io-util"] }
url = "2"
zstd = { version = "0.13", default-features = false }

# Issue #90: parser-hardening test suite mirrors the SQL parser
# coverage (#87). Property tests via proptest, pinned error-message
# snapshots via insta. The `filters` feature (issue #98) lets the
# shared secret redactor mask secret-shaped strings before insta
# diffs the snapshot. `regex` powers the redactor unit tests + the
# wire-side snapshot-redaction lint (#98).
[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["filters"] }
regex = "1"
prost = "0.14"
reddb-grpc-proto = { workspace = true }

[lints]
workspace = true
