# DST Fatia 0 (#1351): the `unreliable-libc` LD_PRELOAD fault-injection shim
# plus the shared WAL recovery-invariant oracle that later DST slices reuse.
#
# Internal test tooling: not published to crates.io (`publish = false`). The
# version still tracks the workspace engine version for coherence.
[package]
name = "unreliable-libc"
version = "1.15.0"
edition.workspace = true
authors.workspace = true
description = "LD_PRELOAD libc fault-injection shim + WAL recovery-invariant oracle for deterministic simulation testing (DST Fatia 0)."
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lib]
name = "unreliable_libc"
path = "src/lib.rs"

# The seeded WAL workload driven under the shim. Lives as a real binary so the
# integration test can spawn it as a separate process with `LD_PRELOAD` set.
[[bin]]
name = "wal_workload"
path = "src/bin/wal_workload.rs"

# The seeded typed-value workload (#1356, pillar B), driven under the shim so a
# real power-cut can crash it mid-write and the recovered committed values can be
# compared against the seed's deterministic model.
[[bin]]
name = "typed_workload"
path = "src/bin/typed_workload.rs"

# The seeded TM commit-path workload (#1651), driven under the shim so a real
# power-cut can crash each commit-path scenario mid-write.
[[bin]]
name = "tm_commit_path_workload"
path = "src/bin/tm_commit_path_workload.rs"

# Store-fork lifecycle workload (#1784), driven under the shim after the test
# harness prepares the operation-specific pre-state.
[[bin]]
name = "store_fork_workload"
path = "src/bin/store_fork_workload.rs"

[dependencies]
reddb-file = { workspace = true }
reddb-types = { workspace = true }
crc32fast = "1.5"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
