# Keep this crate out of the top-level workspace — it's a cdylib built by
# maturin, not a workspace member. Without this empty table cargo treats
# the package as a workspace member candidate and fails with E0464.
[workspace]

[package]
name = "reddb-io-python"
version = "1.12.1"
edition = "2021"
description = "Native Python driver for RedDB (compiled Rust via pyo3)"
license = "MIT"
repository = "https://github.com/reddb-io/reddb"

[lib]
# IMPORTANT: this is the Python module name. After `pip install reddb`
# users do `import reddb`. The pymodule function in src/lib.rs MUST be
# named `reddb` to match.
name = "reddb"
crate-type = ["cdylib"]

[features]
# `embedded` pulls the entire RedDB engine in-process so `connect("file://")`
# and `connect("memory://")` work without spawning anything. The wheel is
# bigger but the experience matches the Rust client.
default = ["embedded"]
embedded = ["dep:reddb"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
webpki-roots = "1.0"

# Engine — only compiled in when the `embedded` feature is on.
# The high-level driver (src/high_level.rs) is gated behind this
# feature too because every helper currently dispatches through the
# in-process runtime. A thin proto-only client wired into
# Backend::Grpc is tracked separately; until then `--no-default-features`
# builds the slim `Connection` / `WireConnection` API only.
reddb = { package = "reddb-io", version = "1.0", path = "../..", optional = true }

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
