[package]
name = "reddb-client"
version = "0.2.4"
edition = "2021"
authors = ["RedBlue Team"]
description = "Official Rust client for RedDB — embedded engine and (eventually) gRPC remote, behind one connection-string API."
license = "MIT"
homepage = "https://github.com/forattini-dev/reddb"
repository = "https://github.com/forattini-dev/reddb"
documentation = "https://docs.rs/reddb-client"
readme = "README.md"
keywords = ["reddb", "database", "client", "embedded"]
categories = ["database", "api-bindings"]

[features]
# `embedded` pulls the entire RedDB engine in-process (fastest path).
# `grpc` pulls the same engine but only uses its tonic client type —
# today both features flow through `dep:reddb`. A standalone thin client
# that does not compile the engine is tracked in PLAN_DRIVERS.md.
default = ["embedded"]

embedded = ["dep:reddb"]
grpc = ["dep:reddb", "dep:tokio"]

[dependencies]
# Engine — only compiled in when the `embedded` or `grpc` feature is on.
reddb = { version = "0.2", path = "../..", optional = true }

# Only needed by the grpc backend (block_on inside the sync methods).
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }

# Connection-string parsing.
url = "2"

# We deliberately avoid pulling serde here; the API is JSON-string-in,
# JSON-string-out. Users that want serde integration can wrap easily.

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
