[package]
name = "reddb-client"
version = "0.2.4"
edition = "2021"
authors = ["RedBlue Team"]
description = "Official Rust client for RedDB — embedded engine and (eventually) gRPC remote, behind one connection-string API."
license = "MIT"
homepage = "https://github.com/forattini-dev/reddb"
repository = "https://github.com/forattini-dev/reddb"
documentation = "https://docs.rs/reddb-client"
readme = "README.md"
keywords = ["reddb", "database", "client", "embedded"]
categories = ["database", "api-bindings"]

[features]
# `embedded` pulls the entire RedDB engine in-process (fastest path).
# `grpc` pulls the same engine but only uses its tonic client type —
# today both features flow through `dep:reddb`. A standalone thin client
# that does not compile the engine is tracked in PLAN_DRIVERS.md.
default = ["embedded"]

embedded = ["dep:reddb"]
grpc = ["dep:reddb", "dep:tokio"]
# RedWire v2 native TCP client. No engine dep — speaks the wire
# protocol directly. See ADR 0001.
redwire = ["dep:tokio", "dep:serde_json"]
# RedWire v2 over TLS / mTLS. Reuses the redwire handshake; flips
# the transport to tokio-rustls.
redwire-tls = [
    "redwire",
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:rustls-pemfile",
]

[dependencies]
# Engine — only compiled in when the `embedded` or `grpc` feature is on.
reddb = { version = "0.2", path = "../..", optional = true }

# Only needed by the grpc backend (block_on inside the sync methods).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util"], optional = true }

# RedWire v2 handshake payloads are JSON-encoded today. Pulled in
# only by the `redwire` feature.
serde_json = { version = "1", optional = true }

# TLS / mTLS for the RedWire client. Pulled in only by the
# `redwire-tls` feature.
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rustls-pemfile = { version = "2", optional = true }

# Connection-string parsing.
url = "2"

# We deliberately avoid pulling serde here; the API is JSON-string-in,
# JSON-string-out. Users that want serde integration can wrap easily.

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
